fix dark mode for 404 page

--- a/src/pages/notFound/NotFound.module.css
+++ b/src/pages/notFound/NotFound.module.css
@@ -42,3 +42,7 @@
   background-color: var( --dark-theme-button-bg-color);
   color: var( --dark-theme-button-text-color);
 }
+
+.dark-section {
+  background: #000;
+}
